update new CD Workflow

--- a/.github/workflows/cd-node.js.yml
+++ b/.github/workflows/cd-node.js.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy using ssh
+      - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with: 
           host: ${{ secrets.HOST }}
@@ -17,17 +17,6 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }} 
           port: ${{ secrets.PORT }}
 
-          # Skrip dibungkus dengan jel_exec agar berjalan di node yang benar
+          # Skrip diubah menjadi satu baris dengan && untuk eksekusi yang andal
           script: |
-            jel_exec --nodeId 61715 << 'EOL'
-              cd /home/jelastic/ROOT
-              git pull origin master
-              echo "--- Git status after pull ---"
-              git status
-              echo "--- Installing dependencies ---"
-              npm ci --omit=dev
-              echo "--- Building application ---"
-              npm run build
-              echo "--- Restarting PM2 application ---"
-              pm2 restart my-app
-            EOL
+            jel_exec --nodeId 61715 "cd /home/jelastic/ROOT && git pull origin master && npm ci && npm run build && pm2 restart my-app"
