--- a/.github/workflows/cd-node.js.yml
+++ b/.github/workflows/cd-node.js.yml
@@ -9,13 +9,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Langkah 1: Tetap menggunakan ssh-agent untuk memuat kunci
-      - name: Setup SSH Key
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.PRIVATE_KEY }}
+      - name: Execute Deployment via Jelastic API
+        env:
+          JELASTIC_API_HOST: app.dewacloud.com # Host API DewaCloud
+          JELASTIC_USERNAME: ${{ secrets.USERNAME }}
+          JELASTIC_PASSWORD: ${{ secrets.JELASTIC_PASSWORD }}
+          ENV_NAME: ${{ secrets.ENV_NAME }}
+          NODE_ID: 61715 # ID Node.js Anda
 
-      # Langkah 2: Mengirim perintah melalui "echo" dan "pipe" ke SSH dengan flag -t
-      - name: Connect and Deploy
         run: |
-          echo "jel_exec --nodeId 61715 'cd /home/jelastic/ROOT && git pull origin master && npm ci && npm run build && pm2 restart my-app'" | ssh -tt -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USERNAME }}@${{ secrets.HOST }}
+          # Perintah yang akan dieksekusi di server
+          COMMANDS_TO_RUN="cd /home/jelastic/ROOT && git pull origin master && npm ci && npm run build && pm2 restart my-app"
+
+          echo "1. Authenticating to Jelastic API..."
+          # Login untuk mendapatkan token sesi
+          RESPONSE=$(curl -s "https://${JELASTIC_API_HOST}/1.0/users/authentication/signin" --data-urlencode "login=${JELASTIC_USERNAME}" --data-urlencode "password=${JELASTIC_PASSWORD}")
+          
+          # Ekstrak token sesi dari respons JSON
+          SESSION_TOKEN=$(echo $RESPONSE | jq -r .session)
+
+          if [ -z "$SESSION_TOKEN" ] || [ "$SESSION_TOKEN" == "null" ]; then
+            echo "::error::Failed to get session token. Response: $RESPONSE"
+            exit 1
+          fi
+
+          echo "Authentication successful. Session token obtained."
+
+          echo "2. Executing remote commands..."
+          # Jalankan perintah di node tujuan menggunakan API
+          API_RESPONSE=$(curl -s "https://${JELASTIC_API_HOST}/1.0/environment/control/execmdbyid" --data-urlencode "session=${SESSION_TOKEN}" --data-urlencode "envname=${ENV_NAME}" --data-urlencode "nodeid=${NODE_ID}" --data-urlencode "command=${COMMANDS_TO_RUN}")
+          
+          echo "API Response: $API_RESPONSE"
+          
+          # Periksa apakah eksekusi berhasil
+          RESULT_CODE=$(echo $API_RESPONSE | jq -r .result)
+          if [ "$RESULT_CODE" != "0" ]; then
+            echo "::error::Command execution failed. See response above."
+            exit 1
+          fi
+          
+          echo "✅ Deployment commands executed successfully via API."
