--- a/.github/workflows/cd-node.js.yml
+++ b/.github/workflows/cd-node.js.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Execute Deployment via Jelastic API
         env:
-          JELASTIC_API_HOST: app.jkt01.dewaweb.com
+          JELASTIC_API_HOST: my-app.user.cloudjkt01.com
           JELASTIC_TOKEN: ${{ secrets.JELASTIC_TOKEN }}
           ENV_NAME: ${{ secrets.ENV_NAME }}
           NODE_ID: 61715
