--- a/.github/workflows/cd-node.js.yml
+++ b/.github/workflows/cd-node.js.yml
@@ -21,7 +21,7 @@ jobs:
 
           echo "Executing remote commands using Access Token..."
 
-          API_RESPONSE=$(curl -s "https://${JELASTIC_API_HOST}/1.0/environment/control/execmdbyid" --data-urlencode "token=${JELASTIC_TOKEN}" --data-urlencode "envname=${ENV_NAME}" --data-urlencode "nodeid=${NODE_ID}" --data-urlencode "command=${COMMANDS_TO_RUN}")
+          API_RESPONSE=$(curl -sk "https://${JELASTIC_API_HOST}/1.0/environment/control/execmdbyid" --data-urlencode "token=${JELASTIC_TOKEN}" --data-urlencode "envname=${ENV_NAME}" --data-urlencode "nodeid=${NODE_ID}" --data-urlencode "command=${COMMANDS_TO_RUN}")
 
           echo "API Response: $API_RESPONSE"
 
