--- a/.github/workflows/cd-node.js.yml
+++ b/.github/workflows/cd-node.js.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Execute Deployment via Jelastic API
         env:
-          JELASTIC_API_HOST: my-app.user.cloudjkt01.com
+          JELASTIC_API_HOST: app.infra.dewacloud.com 
           JELASTIC_TOKEN: ${{ secrets.JELASTIC_TOKEN }}
           ENV_NAME: ${{ secrets.ENV_NAME }}
           NODE_ID: 61715
@@ -21,7 +21,8 @@ jobs:
 
           echo "Executing remote commands using Access Token..."
 
-          API_RESPONSE=$(curl -sk "https://${JELASTIC_API_HOST}/1.0/environment/control/execmdbyid" --data-urlencode "token=${JELASTIC_TOKEN}" --data-urlencode "envname=${ENV_NAME}" --data-urlencode "nodeid=${NODE_ID}" --data-urlencode "command=${COMMANDS_TO_RUN}")
+          # MENGGANTI parameter 'token=' menjadi 'session='
+          API_RESPONSE=$(curl -sk "https://${JELASTIC_API_HOST}/1.0/environment/control/execmdbyid" --data-urlencode "session=${JELASTIC_TOKEN}" --data-urlencode "envname=${ENV_NAME}" --data-urlencode "nodeid=${NODE_ID}" --data-urlencode "command=${COMMANDS_TO_RUN}")
 
           echo "API Response: $API_RESPONSE"
 
