--- a/.github/workflows/cd-node.js.yml
+++ b/.github/workflows/cd-node.js.yml
@@ -11,25 +11,43 @@ jobs:
     steps:
       - name: Execute Deployment via Jelastic API
         env:
-          JELASTIC_API_HOST: app.infra.dewacloud.com 
+          JELASTIC_API_HOST: app.infra.dewacloud.com
           JELASTIC_TOKEN: ${{ secrets.JELASTIC_TOKEN }}
           ENV_NAME: ${{ secrets.ENV_NAME }}
           NODE_ID: 61715
 
         run: |
-          COMMANDS_TO_RUN="cd /home/jelastic/ROOT && git pull origin master && npm ci && npm run build && pm2 restart my-app"
+          echo "Preparing JSON command list..."
+          # Membuat format JSON untuk commandList
+          COMMAND_JSON='[
+            {"command": "cd /home/jelastic/ROOT"},
+            {"command": "git pull origin master"},
+            {"command": "npm ci"},
+            {"command": "npm run build"},
+            {"command": "pm2 restart my-app"}
+          ]'
 
-          echo "Executing remote commands using Access Token..."
-
-          # MENGGANTI parameter 'token=' menjadi 'session='
-          API_RESPONSE=$(curl -sk "https://${JELASTIC_API_HOST}/1.0/environment/control/rest/execmdbyid" --data-urlencode "session=${JELASTIC_TOKEN}" --data-urlencode "envname=${ENV_NAME}" --data-urlencode "nodeid=${NODE_ID}" --data-urlencode "command=${COMMANDS_TO_RUN}")
-
+          echo "Executing remote commands via API..."
+          
+          # Menggunakan path dan parameter yang benar sesuai dokumentasi
+          API_RESPONSE=$(curl -sk "https://${JELASTIC_API_HOST}/1.0/environment/control/rest/execcmdbyid" \
+            --data-urlencode "session=${JELASTIC_TOKEN}" \
+            --data-urlencode "envname=${ENV_NAME}" \
+            --data-urlencode "nodeid=${NODE_ID}" \
+            --data-urlencode "commandList=${COMMAND_JSON}")
+          
           echo "API Response: $API_RESPONSE"
-
+          
           RESULT_CODE=$(echo $API_RESPONSE | jq -r .result)
           if [ "$RESULT_CODE" != "0" ]; then
             echo "::error::Command execution failed. See response above."
             exit 1
           fi
-
+          
+          # Mengambil dan menampilkan output dari setiap perintah
+          COMMAND_OUTPUTS=$(echo $API_RESPONSE | jq -r .responses)
+          echo "--- Deployment Script Output ---"
+          echo "$COMMAND_OUTPUTS"
+          echo "------------------------------"
+          
           echo "✅ Deployment commands executed successfully via API."
